--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
-          npm install
-      - run: |
-          npm run all
+      - run: exit 1
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
