--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: sleep 40
-          exit 1
+      - run: sleep 30
+      - run: exit 1
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
