--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@octokit/graphql": "^4.6.1",
-    "@octokit/webhooks-definitions": "^3.67.3"
+    "@octokit/webhooks-definitions": "^3.65.2"
   },
-    "@types/jest": "^26.0.21",
-    "@types/node": "^18.11.18",
+  "devDependencies": {
+    "@types/jest": "^27.5.0",
+    "@types/node": "^14.14.35",
     "@typescript-eslint/parser": "^4.19.0",
     "@vercel/ncc": "^0.27.0",
-    "eslint": "^8.22.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-github": "^4.1.2",
     "eslint-plugin-jest": "^24.3.2",
-    "husky": "^8.0.3",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "lint-staged": "^10.5.4",
