--- a/.github/workflows/merge_queue.yml
+++ b/.github/workflows/merge_queue.yml
@@ -10,6 +10,7 @@ jobs:
   merge-queue:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout
       - uses: ./
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
