--- a/.github/workflows/merge_queue.yml
+++ b/.github/workflows/merge_queue.yml
@@ -10,7 +10,6 @@ jobs:
   merge-queue:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout
-      - uses: ./
+      - uses: GetResQ/resq-merge-bot@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
