Added variable to entire workflow

--- a/.github/workflows/merge_queue.yml
+++ b/.github/workflows/merge_queue.yml
@@ -6,6 +6,9 @@ on:
     types:
       - labeled
 
+env:
+  CHECKS_TO_SKIP: ${{ fromJSON(vars.CHECKS_TO_SKIP) }}
+
 jobs:
   merge-queue:
     runs-on: ubuntu-latest
@@ -13,4 +16,3 @@ jobs:
       - uses: GetResQ/resq-merge-bot@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CHECKS_TO_SKIP: ${{ fromJSON(vars.CHECKS_TO_SKIP) }}
