--- a/.github/workflows/merge_queue.yml
+++ b/.github/workflows/merge_queue.yml
@@ -6,9 +6,6 @@ on:
     types:
       - labeled
 
-env:
-  CHECKS_TO_SKIP: ${{ fromJSON(vars.CHECKS_TO_SKIP) }}
-
 jobs:
   merge-queue:
     runs-on: ubuntu-latest
@@ -16,3 +13,5 @@ jobs:
       - uses: GetResQ/resq-merge-bot@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          checks-to-skip: "foobar"
