--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
   icon: "git-merge"
   color: "green"
 inputs:
-  checks_to_skip:
+  checks-to-skip:
     description: "List of checks that can be skipped"
     required: true
     default: ""
