query for checks on the PR with the command:queue-for-merging and check whether certain checks are passing before queueing.

--- a/action.yml
+++ b/action.yml
@@ -11,3 +11,6 @@ inputs:
   checks_to_skip:
     description: "List of checks that can be skipped"
     required: true
+  checks_to_wait:
+    description: "List of checks that must pass before the PR can be queued"
+    required: true
