--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "merge-queue-action",
-  "version": "0.1.0",
+  "name": "resq-merge-bot",
+  "version": "0.2.0",
   "description": "GitHub action to help merge PRs in a queueing manner",
   "main": "lib/main.js",
   "scripts": {
@@ -14,35 +14,40 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/autifyhq/merge-queue-action.git"
+    "url": "git+https://github.com/GetResQ/resq-merge-bot.git"
   },
   "keywords": [
     "actions",
     "node",
-    "setup"
+    "setup",
+    "merge",
+    "queue",
+    "mergify"
   ],
-  "author": "Kanitkorn S.",
+  "author": "GetResQ",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@octokit/graphql": "^4.6.1",
-    "@octokit/webhooks-definitions": "^3.65.2"
+    "@actions/core": "^1.10.1",
+    "@octokit/graphql": "^7.0.2",
+    "@octokit/webhooks-types": "^7.3.2"
   },
   "devDependencies": {
+    "@octokit/types": "^12.6.0",
     "@types/jest": "^27.5.0",
-    "@types/node": "^14.14.35",
-    "@typescript-eslint/parser": "^4.19.0",
-    "@vercel/ncc": "^0.27.0",
-    "eslint": "^7.22.0",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-github": "^4.1.2",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "prettier": "2.2.1",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^7.1.0"
   },
   "husky": {
     "hooks": {
