--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "merge-queue-action",
-  "version": "0.1.0",
-  "description": "GitHub action to help merge PRs in a queueing manner",
+  "version": "1.0.0",
+  "description": "GitHub action to help merge PRs in a queue-ish manner",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
